<resources>
    <string name="app_name" translatable="false">Snap_Solve</string>
    <string name="collaborators">Collaborators: </string>
    <string name="scan_qr_code">Scan QR</string>
    <string name="center_qr_code">Center the QR code in the frame to scan</string>
    <string name="share_via_qr">Share via QR Code</string>
    <string name="scan_to_collaborate">Scan this QR code to collaborate on this note</string>
    <string name="share_link">Share Link</string>
    <string name="newbutton">New</string>
    <string name="noteTitle">Notes</string>
    <string name="back">Back</string>
    <string name="nameOfScreenMenu">Menu</string>
    <string name="btnEdit">Edit</string>
    <string name="my_follower">My follower</string>
    <string name="recommend_product">Recommend Products</string>
    <string name="premium">Premium</string>
    <string name="start_for_free">Start for free</string>
    <string name="numberFollower">125</string>
    <string name="question_history">Question history</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="recent_research">Recent Research</string>
    <string name="question">Question</string>
    <string name="search">Search</string>
    <string name="research">Research</string>
    <string name="nameOfUser">Tuấn Đạt</string>
    <string name="tools">Tools</string>
    <string name="note">Note</string>
    <string name="support">Support</string>
    <string name="notice">Notice</string>
    <string name="help">Help</string>
    <string name="help_center">Help Center</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="push_notification_settings">Push notification settings</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="version">Version</string>
    <string name="versionNumber">beta</string>
    <string name="logout">Logout</string>
    <string name="note_delete_account">You will lost all of your data and can\'t\nlogin this account</string>
    <string name="delete_account">Delete Account</string>
    <string name="my_profile">My profile</string>
    <string name="change">Change</string>
    <string name="username">Username</string>
    <string name="status_message">Status message</string>
    <string name="detail_status_message">I\'m hungry with my exercise</string>
    <string name="student_information">Student Information</string>
    <string name="detail_student_infomation">I\'m learning at grade fifthteen</string>
    <string name="account_information">Account information</string>
    <string name="mailOfUser">trinhvinhtuandat@gmail.com</string>
    <string name="snap_solve_uid">Snap Solve UID</string>
    <string name="user_id">axQ*skx</string>
    <string name="linked_accounts">Linked accounts</string>
    <string name="facebook">Facebook</string>
    <string name="nameOfFacebookUser">maybetuandat</string>
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="description_edit_user_name">A username can consit of any combination of letter, number or(._) (20 characters)</string>
    <string name="status_mesage">Status Mesage</string>
    <string name="enter_new_mesage">Enter new mesage</string>
    <string name="title_edit_information_student">Please provide your grade information</string>
    <string name="content_edit_student_information">We\'ll prepare content tailored to you based on the information</string>
    <string name="grade_1">Grade 1</string>
    <string name="grade_2">Grade 2</string>
    <string name="grade_3">Grade 3</string>
    <string name="grade_4">Grade 4</string>
    <string name="grade_5">Grade 5</string>
    <string name="grade_6">Grade 6</string>
    <string name="grade_7">Grade 7</string>
    <string name="grade_8">Grade 8</string>
    <string name="grade_9">Grade 9</string>
    <string name="grade_10">Grade 10</string>
    <string name="grade_11">Grade 11</string>
    <string name="grade_12">Grade 12</string>
    <string name="grade_13">Grade 13</string>
    <string name="up_load_file">Up load file</string>
    <string name="create_new_note">Create new note</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="camera">Camera</string>
    <string name="scan">Scan</string>
    <string name="day">Day</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="folder">Folder</string>
    <string name="new_text">New</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="get_help">Get Help</string>
    <string name="see_solve">Get Solve</string>
    <string name="gethelp">Get Help</string>
    <string name="xemgiaithich">See Solve</string>
    <string name="out_of_school">I\'m not attending school</string>
    <string name="btnComplete">Complete</string>
    <string-array name="spinnerNoteType">
        <item>Date</item>
        <item>Name</item>
        <item>Type</item>
    </string-array>
    <string name="restart_required">Restart Required</string>
    <string name="language_change_restart_message">The language has been changed. To apply the changes fully, the app needs to be restarted.</string>
    <string name="restart_now">Restart Now</string>
    <string name="restart_later">Later</string>
    <string name="system_language">Use System Language</string>
    <string name="community_header">Community</string>
    <string name="community_profile_header">My Activities in the Community</string>
    <string name="community_profile_your_posts">Your posts</string>
    <string name="community_profile_liked_posts">Liked posts</string>
    <string name="community_all">All</string>
    <string name="post_detail_header">Post Details</string>
    <string name="post_detail_images">Images</string>
    <string name="post_detail_like">Like</string>
    <string name="post_detail_comment">Comment</string>
    <string name="post_detail_comments">Comments</string>
    <string name="post_detail_share">Share</string>
    <string name="post_detail_comment_hint">Enter comment...</string>
    <string name="post_comment_reply_header">Replies</string>
    <string name="post_comment_reply_all">All Replies</string>
    <string name="post_comment_reply_image_selected">Selected Images</string>
    <string name="post_comment_reply_hint">Enter reply...</string>
    <string name="post_edit_header">Edit Post</string>
    <string name="post_edit_edit">Edit</string>
    <string name="post_filter_header">Filter by Topic</string>
    <string name="post_filter_reset">Reset</string>
    <string name="post_filter_apply">Apply</string>
    <string name="posting_title">Posting</string>
    <string name="posting_choose_topic">Please choose a topic</string>
    <string name="posting_hint_title">Enter title...</string>
    <string name="posting_hint_content">Enter content...</string>
    <string name="posting_add_image">Add Image</string>
    <string name="posting_post">Post</string>
    <string name="posting_select">Select</string>
    <string name="posting_topic_header">Topic</string>
    <string name="posting_topic_selected">Selected Topics</string>
    <string name="posting_image_selected">Selected Images</string>
    <string name="post_search_hint">Please enter the keyword...</string>
    <string name="post_search_recent">Recent Search</string>
    <string name="post_search_delete_all">Delete all</string>
    <string name="post_search_header">Result for: %1$s</string>
    <string name="post_search_newest">Newest</string>
    <string name="post_search_popular">Popular</string>
    <string name="post_search_filter">Filter</string>
    <string name="post_search_filter_topic">Filter: %1$s</string>
    <string name="post_search_no_result">No results</string>
    <string name="change_language_title">Change Language</string>
    <string name="change_language_message">Are you sure you want to change the language? The app will restart to apply changes.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="create_account">Create Account</string>
    <string name="register_description">Please enter your information to create an account</string>
    <string name="complete_profile">Complete Your Profile</string>
    <string name="complete_profile_description">Just a few more details to enhance your experience</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="continue_text">Continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="translate">Translate</string>
    <string name="type_your_text">Type your text...</string>
    <string name="translation_placeholder">Translation will appear here...</string>
    <string name="translation_label">Translation...</string>
    <string name="copy_translation">Copy translation</string>
    <string name="speak_translation">Speak translation</string>
    <string name="swap_languages">Swap languages</string>
    <string name="select_language">Select Language</string>
    <string name="translation_copied">Translation copied to clipboard</string>
    <string name="translation_failed">Translation failed</string>
    <string name="download_model_failed">Failed to download translation model</string>
    <string name="ask_ai_solution">Ask AI for Solution</string>
    <string name="ai_solution">AI Solution</string>
    <string name="premium_required">Premium Account Required</string>
    <string name="premium_required_message">This feature is only available for Premium users. Upgrade now to access AI solutions.</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="generating_solution">Generating AI solution...</string>
    <string name="see_more_searches">See More Searches</string>
    <string name="ic_search_history">Search History</string>
    <string name="ask_snapsolve">Ask SnapSolve anything</string>
    <string name="type_question">Type your question</string>
    <string name="utilities">Utilities</string>
    <string name="dictionary">Translate</string>
    <string name="calculator">Calculator</string>
    <string name="entertainment">Entertainment</string>
    <string name="today_missions">Today missions</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="ask_question">Ask question</string>
    <string name="points">+ 10</string>
    <string name="open_missions">Open missions board</string>
    <string name="tiktok">Tiktok</string>
    <string name="share">Share</string>
    <string name="snap_solve_premium">Snap Solve Premium</string>
    <string name="unlimited_questions_and_answers">Unlimited questions and answers</string>
    <string name="ai_question_resolve">You can use AI Question Solver and Multiple question search\nwithout any limits</string>
    <string name="improved_answer">Improved answer</string>
    <string name="smarter_ai">A smarter AI gives you reliable answers</string>
</resources>