<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_uploadfile"
        android:title="@string/up_load_file"
        android:icon="@drawable/upload"/>
    <item
        android:id="@+id/action_createnote"
        android:title="@string/create_new_note"
        android:icon="@drawable/addnote"/>
    <item
        android:id="@+id/action_createfolder"
        android:title="@string/create_new_folder"
        android:icon="@drawable/folder" />
    <item
        android:id="@+id/action_camera"
        android:title="@string/camera"
        android:icon="@drawable/camera" />
    <item
        android:id="@+id/action_scan"
        android:title="@string/scan"
        android:icon="@drawable/scan" />
</menu>
